# Auralytics-Web-App

./: .editorconfig  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
backend/: README.md  inference.py  main.py  requirements.txt
backend/models/: README.md  fan_id_06_mlp_best.pth  fan_id_06_normalizer.npz  pump_id_04_mlp_best.pth  pump_id_04_normalizer.npz  valve_id_04_mlp_best.pth  valve_id_04_normalizer.npz
data/: README.md
docs/: demo_spec.md  final_results.md  roadmap.md
frontend/: README.md  app.js  index.html
models/: README.md
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_training.ipynb  04_evaluation.ipynb
results/: README.md
results/per_id_v2/: fan_all_ids_summary.csv  pump_all_ids_summary.csv  valve_all_ids_summary.csv
src/: __init__.py  dataset.py  evaluate.py  model.py  preprocess.py  train.py  utils.py
tests/: README.md
