[project]
name = "auralytics"
version = "0.1.0"
description = "Acoustic anomaly detection for predictive maintenance"
readme = "README.md"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
